Remove image, and make component for image manipulation, fix #3

--- a/resources/assets/sass/admin.scss
+++ b/resources/assets/sass/admin.scss
@@ -31,6 +31,7 @@
 @import "admin/components/data-table";
 @import "admin/components/block-info";
 @import "admin/components/tabs";
+@import "admin/components/upload-image";
 
 // Pages
 @import "admin/pages/profile";
