Properties, not complated, need some fix and remove old version

--- a/resources/assets/sass/admin/components/_grids.scss
+++ b/resources/assets/sass/admin/components/_grids.scss
@@ -69,3 +69,6 @@
 .pl-10 { padding-left: 10px; }
 .pl-15 { padding-left: 15px; }
 .pl-20 { padding-left: 20px; }
+
+.w-100 { width: 100%; }
+.h-100 { height: 100%; }
