--- a/resources/assets/sass/admin/layouts/_default.scss
+++ b/resources/assets/sass/admin/layouts/_default.scss
@@ -44,9 +44,14 @@ body > div, .container {
 
 .right-bar {
   flex: 1;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .content {
   padding: 20px;
+
+  flex: 1;
 }
 
